Fixes spacing on and adds background to social sharer include and tests it on another blog page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1869,6 +1869,12 @@ section, summary, time, mark, audio, video {
 
     /* Form */
 
+    .subscribe-area {
+      background-color: rgba(210, 215, 217, 0.1);
+      border-radius: 0.375em;
+      padding: 0 0 0.5em 0.5em;
+    }
+
     .subscribe-cta {
       color: #3d4449;
       font-size: 1em;
@@ -1901,6 +1907,11 @@ section, summary, time, mark, audio, video {
       margin: 1.0em 0 0 0;
       text-align: right;
     }
+
+    .subscribe-bottom-form {
+      margin: 0;
+    }
+
 
     form {
       margin: 0 0 2em 0;
@@ -2341,7 +2352,8 @@ section, summary, time, mark, audio, video {
     }
 
     ul.icons-bottom {
-      margin-bottom: 1em !important;
+      margin-top: 2em;
+      margin-bottom: 1em;
     }
 
     ul.icons li {
